welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: type mismatch;
 found   : Unit
 required: Boolean
			if (nums(i+1)=nb) {
                                     ^noTriples:5: error: type mismatch;
 found   : Unit
 required: Boolean
				if (nums (i+2)=nb) {
                                              ^